# stepanov_efficent_programming

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json
lecture_1/: CMakeLists.txt  README.md  instrumented.h  notes.ipynb  pair.h  singleton.h
lecture_2/: notes.ipynb  pair.h  singleton.h
lecture_3/: CMakeLists.txt  instrumented.cpp  instrumented.h  notes.ipynb
lecture_4/: example.cpp  min.h  notes.ipynb
lecture_5/: min.h  swap.h
lecture_6/: reduction_helpers.h
lecture_7/: min.cpp  reduction_helpers.h
