cmake_minimum_required(VERSION 3.22..)

project(StepanovEfficentProgramming)

add_subdirectory(lecture_1)
# add_subdirectory(lecture_2)
add_subdirectory(lecture_3)
# add_subdirectory(lecture_4)
# add_subdirectory(lecture_5)
# add_subdirectory(lecture_6)
# add_subdirectory(lecture_7)
# add_subdirectory(lecture_8)

